--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,10 @@ python = "^3.6"
 Flask = "^1.1.2"
 requests = "^2.25.1"
 beautifulsoup4 = "^4.9.3"
+praw = {version = "^7.1.0", optional = true}
+gunicorn = {version = "^20.0.4", optional = true}
 
 [tool.poetry.dev-dependencies]
-gunicorn = "^20.0.4"
-praw = "^7.1.0"
 
 [tool.poetry.scripts]
 inquisitor = "inquisitor.cli:main"
