--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ beautifulsoup4 = "^4.9.3"
 praw = {version = "^7.1.0", optional = true}
 gunicorn = {version = "^20.0.4", optional = true}
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.extras]
+dev = ["praw"]
 
 [tool.poetry.scripts]
 inquisitor = "inquisitor.cli:main"
