--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ praw = {version = "^7.1.0", optional = true}
 gunicorn = {version = "^20.0.4", optional = true}
 
 [tool.poetry.extras]
-dev = ["praw"]
+dev = ["praw", "gunicorn"]
 
 [tool.poetry.scripts]
 inquisitor = "inquisitor.cli:main"
