--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,10 @@ requests = "^2.25.1"
 beautifulsoup4 = "^4.9.3"
 praw = {version = "^7.1.0", optional = true}
 gunicorn = {version = "^20.0.4", optional = true}
+feedparser = {version = "^6.0.2", optional = true}
 
 [tool.poetry.extras]
-dev = ["praw", "gunicorn"]
+dev = ["praw", "gunicorn", "feedparser"]
 
 [tool.poetry.scripts]
 inquisitor = "inquisitor.cli:main"
