--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ readme = "README.md"
 repository = "https://github.com/Jaculabilis/Inquisitor"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-Flask = "^2.2.2"
+python = "^3.10"
+flask = "^2.2.2"
 requests = "^2.28.1"
 beautifulsoup4 = "^4.11.1"
-praw = {version = "^7.1.0", optional = true}
-gunicorn = {version = "^20.0.4", optional = true}
-feedparser = {version = "^6.0.2", optional = true}
+praw = {version = "^7.6.1", optional = true}
+gunicorn = {version = "^20.1.0", optional = true}
+feedparser = {version = "^6.0.10", optional = true}
 
 [tool.poetry.extras]
 dev = ["praw", "gunicorn", "feedparser"]
