--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,7 @@ python = "^3.10"
 flask = "^2.2.2"
 requests = "^2.28.1"
 beautifulsoup4 = "^4.11.1"
-praw = {version = "^7.6.1", optional = true}
-gunicorn = {version = "^20.1.0", optional = true}
-feedparser = {version = "^6.0.10", optional = true}
-
-[tool.poetry.extras]
-dev = ["praw", "gunicorn", "feedparser"]
+gunicorn = "^20.1.0"
 
 [tool.poetry.scripts]
 inquisitor = "inquisitor.cli:main"
