--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ beautifulsoup4 = "^4.11.1"
 praw = {version = "^7.6.1", optional = true}
 gunicorn = {version = "^20.1.0", optional = true}
 feedparser = {version = "^6.0.10", optional = true}
+protobuf = "^4.21.12"
 
 [tool.poetry.extras]
 dev = ["praw", "gunicorn", "feedparser"]
